--- a/Y18兵團出擊-科影時代.md
+++ b/Y18兵團出擊-科影時代.md
@@ -87,5 +87,5 @@
 
  - 如有興趣出團，請帶備回鄉證出席！ 
 
-## 立即留位出團 Whatsapp + 852 5333 1074 YT
+## [立即留位出團 Whatsapp + 852 5333 1074 YT](https://api.whatsapp.com/send?phone=85253331074&text=我要去大灣區創業 )
 
