--- a/Y18-20190621-fecd.md
+++ b/Y18-20190621-fecd.md
@@ -2,11 +2,11 @@
 ![億兆京](./footer-logo.png "億兆京")
 
 
-
-
 # 6月21日．Y18兵團出擊！ 大灣區．成本低．回報高！
 
--圖-
+
+![fecd1st](./WhatsApp%20Image%202019-06-14%20at%2019.11.10.jpeg "fecd1st")
+
 
 ## 經過幾個月不斷考察，莫生與 Y18團隊，又搵到倍升寶藏！
 
