--- a/Y18-20190621-fecd.md
+++ b/Y18-20190621-fecd.md
@@ -10,20 +10,17 @@
 
 ## 經過幾個月不斷考察，莫生與 Y18團隊，又搵到倍升寶藏！
 
-
--圖-
+![mok](./WhatsApp%20Image%202019-06-16%20at%2021.58.32.jpeg "mok")
 
 
 今次會到大家去一個大灣區重點科技發展的城市 — 廣州南沙慶盛市 ，將會是Y18兵團今年重點之一！
 
 
--圖-
+![廣州南沙慶盛市-高鐵人數](./廣州南沙慶盛市-高鐵人數.jpg "廣州南沙慶盛市-高鐵人數")
 
+![廣州南沙慶盛市1](./廣州南沙慶盛市1.jpg "廣州南沙慶盛市1")
 
--圖-
-
-
--圖-
+![科影時代商場](./科影時代商場.jpg "科影時代商場")
 
 
 ---
