--- a/Y18-20190621-fecd.md
+++ b/Y18-20190621-fecd.md
@@ -16,7 +16,9 @@
 今次會到大家去一個大灣區重點科技發展的城市 — 廣州南沙慶盛市 ，將會是Y18兵團今年重點之一！
 
 
-![廣州南沙慶盛市-高鐵人數](./廣州南沙慶盛市-高鐵人數.jpg "廣州南沙慶盛市-高鐵人數")
+
+
+![交通方便](./交通方便.jpg "交通方便")
 
 ![廣州南沙慶盛市1](./廣州南沙慶盛市1.jpg "廣州南沙慶盛市1")
 
@@ -31,10 +33,13 @@
 
 
 
--圖-
+高鐵一個多小時到香港
+
+![高鐵一個多小時到香港](./高鐵一個多小時到香港.jpg "高鐵一個多小時到香港")
 
 
--圖-
+
+![廣州南沙慶盛市-高鐵人數](./廣州南沙慶盛市-高鐵人數.jpg "廣州南沙慶盛市-高鐵人數")
 
 
 ．投資額細 💰
