--- a/Y18-20190621-fecd.md
+++ b/Y18-20190621-fecd.md
@@ -46,10 +46,11 @@
 只需投資¥10,000，就享有夾娃娃機創業一站式服務，迅速回本！
 
 
--圖-
+![夾娃娃機創業](./夾娃娃機創業.jpg "夾娃娃機創業")
 
 
--圖-
+
+![fecd1st](./WhatsApp%20Image%202019-06-14%20at%2019.11.10.jpeg "fecd1st")
 
 
 ．產品多樣化
