--- a/Y18-20190621-fecd.md
+++ b/Y18-20190621-fecd.md
@@ -57,11 +57,7 @@
 選擇無人販賣機， 多種貨品選擇， 0租金，低人力，低成本， 便可以享受零售收入和廣告收入！
 
 
-![無人販賣機](./無人販賣機.jpeg "無人販賣機")
-
-
--圖-
-
+![無人販賣機](./無人販賣機.jpg "無人販賣機")
 
 ---
 
