--- a/Y18-20190621-fecd.md
+++ b/Y18-20190621-fecd.md
@@ -66,9 +66,9 @@
 
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/OHT3NwRJb7A?start=255" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+link to site: http://y18.work/en/index.html
 
-
+Explore this data story. . .
 
 -圖-
 
