--- a/Y18-20190621-fecd.md
+++ b/Y18-20190621-fecd.md
@@ -65,15 +65,7 @@
 今次莫生重點介紹大灣區科技城市-廣州南沙區慶盛市-科影時代商場，當然亦會觀覽周邊地帶，深入認識當地潛力。
 
 
-
-link to site: http://y18.work/en/index.html
-
-Explore this data story. . .
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/enjhlnqaXOE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
+[![IMAGE ALT TEXT HERE](http://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg)](http://www.youtube.com/watch?v=YOUTUBE_VIDEO_ID_HERE)
 
 -圖-
 
