--- a/Y18-20190621-fecd.md
+++ b/Y18-20190621-fecd.md
@@ -65,18 +65,9 @@
 今次莫生重點介紹大灣區科技城市-廣州南沙區慶盛市-科影時代商場，當然亦會觀覽周邊地帶，深入認識當地潛力。
 
 
-[![IMAGE ALT TEXT HERE](http://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg)](http://www.youtube.com/watch?v=YOUTUBE_VIDEO_ID_HERE)
-
--圖-
 
 
--圖-
-
-
--圖-
-
-
--圖-
+-youtube-
 
 
 ---
