--- a/Y18-20190621-fecd.md
+++ b/Y18-20190621-fecd.md
@@ -2,7 +2,7 @@
 ![億兆京](./footer-logo.png "億兆京")
 
 
-# 6月21日．Y18兵團出擊！ 大灣區．成本低．回報高！
+# Y18兵團出擊！ 大灣區．成本低．回報高！
 
 
 ![fecd1st](./WhatsApp%20Image%202019-06-14%20at%2019.11.10.jpeg "fecd1st")
@@ -72,7 +72,7 @@
 
  - 出團 
 
- - 日期：6月21日（星期五）
+ - 日期：日期由你定
 
  - 時間：11:30 am - 19:30 pm
 
